jilles      2006/01/21 22:50:25 UTC	(20060121-4645)
  Log:
  Clear bans should require +R, not +f.
  

  Changes:	Modified:
  +1 -1		trunk/modules/chanserv/clear_bans.c (File Modified) 


jilles      2006/01/21 22:47:09 UTC	(20060121-4643)
  Log:
  Extend /cs clear bans to all lists of a channel,
  e.g. /msg chanserv clear # bans beI
  

  Changes:	Modified:
  +3 -2		trunk/help/cservice/clear (File Modified) 
  +21 -2	trunk/help/cservice/clear_bans (File Modified) 
  +34 -4	trunk/modules/chanserv/clear_bans.c (File Modified) 


jilles      2006/01/21 22:10:57 UTC	(20060121-4641)
  Log:
  Hmm no +eI in inspircd, just +bg.
  

  Changes:	Modified:
  +3 -3		trunk/protocol/inspircd.c (File Modified) 


jilles      2006/01/21 22:06:41 UTC	(20060121-4639)
  Log:
  Add support for ban-like modes other than +b (e.g. +e, +I).
  Add a type field to chanban_t; channel_t.bans now holds
  other ban-like modes as well.
  User-visible effects: these modes now work with /os mode
  This could be broken with some ircds (e.g. unreal).
  

  Changes:	Modified:
  +1 -0		trunk/include/channels.h (File Modified) 
  +2 -2		trunk/include/extern.h (File Modified) 
  +3 -0		trunk/include/phandler.h (File Modified) 
  +0 -3		trunk/include/protocol/asuka.h (File Modified) 
  +0 -3		trunk/include/protocol/bahamut.h (File Modified) 
  +0 -5		trunk/include/protocol/charybdis.h (File Modified) 
  +0 -3		trunk/include/protocol/dreamforge.h (File Modified) 
  +0 -5		trunk/include/protocol/hyperion.h (File Modified) 
  +0 -4		trunk/include/protocol/inspircd.h (File Modified) 
  +0 -3		trunk/include/protocol/ircnet.h (File Modified) 
  +0 -3		trunk/include/protocol/monkey.h (File Modified) 
  +0 -5		trunk/include/protocol/plexus.h (File Modified) 
  +0 -3		trunk/include/protocol/ptlink.h (File Modified) 
  +0 -3		trunk/include/protocol/ratbox.h (File Modified) 
  +0 -5		trunk/include/protocol/shadowircd.h (File Modified) 
  +0 -3		trunk/include/protocol/solidircd.h (File Modified) 