@@ -1,3 +1,12 @@
+jilles      2006/01/21 22:50:57 UTC	(20060121-4647)
+  Log:
+  Properly unregister help entry on unload.
+  
+
+  Changes:	Modified:
+  +1 -1		trunk/modules/chanserv/clear_users.c (File Modified) 
+
+
 jilles      2006/01/21 22:50:25 UTC	(20060121-4645)
   Log:
   Clear bans should require +R, not +f.
